--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   margin-top: 50px;
   padding-top: 50px;
   padding-bottom: 60px;
-  border: 7px #cc0000 dotted;
+  border: 7px #cc0000 solid;
   border-radius: 20px;
 }
 
